--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -1,12 +1,12 @@
   <nav class='app-header'>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">&nbsp;CinemaFlix</a>
+      <a href="#!" class="brand-logo">&nbsp;Cinema<span class="brand-first">Flix</span></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+      <ul class="left-fix hide-on-med-and-down">
+        <li><a href="sass.html">Home</a></li>
+        <li><a href="badges.html">About</a></li>
+        <li><a href="collapsible.html">Contact</a></li>
+        <li><a href="mobile.html">Login</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
