--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -1,12 +1,15 @@
-  <nav class='app-header'>
+  <nav class='app-header z-depth-2'>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">&nbsp;Cinema<span class="brand-first">Flix</span></a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#!" class="brand-logo">&nbsp;Q<span class="brand-first">Flix</span></a>
+      <!-- <a href="#" data-activates="mobile-demo" class="button-collapse btn-floating btn-large waves-effect waves-light red"><i class="material-icons">menu</i></a> -->
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> 
       <ul class="left-fix hide-on-med-and-down">
         <li><a href="sass.html">Home</a></li>
         <li><a href="badges.html">About</a></li>
         <li><a href="collapsible.html">Contact</a></li>
-        <li><a href="mobile.html">Login</a></li>
+      </ul>
+      <ul class="right hide-on-med-and-down">
+        <li><a class="waves-effect waves-light btn">Login</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
