--- a/app/templates/components/movie-list.hbs
+++ b/app/templates/components/movie-list.hbs
@@ -1,1 +1,139 @@
+<!-- <div class="row">
+  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">.col-xs-6 .col-sm-4 </div>
+  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">.col-xs-6 .col-sm-4</div>
+  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">.col-xs-6 .col-sm-4</div>
+</div>
+-->
+
+
+      
+        <div class="list-category card-panel pink">
+          <span class="list-title white-text">
+              Now Showing on QfX
+          </span>
+        </div>
+
+<div class="row">
+        
+        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+          <div class="card sticky-action medium" style="overflow: hidden;">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="http://qfxcinemas.com/Home/GetThumbnailImage?EventID=6903">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">more_vert</i></span>
+              </div>
+
+              <div class="card-action">
+                <a href="#">Detail</a>
+                <a href="#">Ticket</a>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+        </div>
+         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+          <div class="card sticky-action medium" style="overflow: hidden;">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="http://qfxcinemas.com/Home/GetThumbnailImage?EventID=6909">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">more_vert</i></span>
+              </div>
+
+              <div class="card-action">
+                <a href="#">Detail</a>
+                <a href="#">Ticket</a>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+        </div>
+         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+          <div class="card sticky-action medium" style="overflow: hidden;">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="http://qfxcinemas.com/Home/GetThumbnailImage?EventID=6912">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">more_vert</i></span>
+              </div>
+
+              <div class="card-action">
+                <a href="#">Detail</a>
+                <a href="#">Ticket</a>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+        </div>
+         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+          <div class="card sticky-action medium" style="overflow: hidden;">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="http://qfxcinemas.com/Home/GetThumbnailImage?EventID=6901">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">more_vert</i></span>
+              </div>
+
+              <div class="card-action">
+                <a href="#">Detail</a>
+                <a href="#">Ticket</a>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+        </div>
+         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+          <div class="card sticky-action medium" style="overflow: hidden;">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="http://qfxcinemas.com/Home/GetThumbnailImage?EventID=6903">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">more_vert</i></span>
+              </div>
+
+              <div class="card-action">
+                <a href="#">Detail</a>
+                <a href="#">Ticket</a>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+        </div>
+         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+          <div class="card sticky-action medium" style="overflow: hidden;">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="http://qfxcinemas.com/Home/GetThumbnailImage?EventID=6903">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">more_vert</i></span>
+              </div>
+
+              <div class="card-action">
+                <a href="#">Detail</a>
+                <a href="#">Ticket</a>
+              </div>
+
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">3D Rogue One: A Star Wars Story<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+        </div>
+</div>
 {{yield}}
