--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -1,6 +1,6 @@
   <nav class='app-header z-depth-2'>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">&nbsp;Q<span class="brand-first">Flix</span></a>
+      <a href="#!" class="brand-logo">&nbsp;QFX<span class="brand-first">Plus</span></a>
       <!-- <a href="#" data-activates="mobile-demo" class="button-collapse btn-floating btn-large waves-effect waves-light red"><i class="material-icons">menu</i></a> -->
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> 
       <ul class="left-fix hide-on-med-and-down">
@@ -12,6 +12,7 @@
         <li><a class="waves-effect waves-light btn">Login</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
+        <li><img src="http://qfxcinemas.com/home/GetMobileAdImage?EventID=15" style="width:100%;"></li>
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
         <li><a href="collapsible.html">Javascript</a></li>
