--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,4 @@
- {{movie-list}}   
+ {{movie-list movies=model type="Now Showing"}}
+
+{{movie-list movies=model type="Comming Soon"}}     
 {{outlet}}
