--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -66,14 +66,14 @@ body {
     padding:0px 4px 0px 4px!important;
 }
 
-.card a{
+.movie-action a{
     color:#AA00FF!important;
 }
-.card a:hover{
+.movie-action a:hover{
     color: #ffd8a6!important;
 }
 
-.card-title {
+.show-list .card-title {
     line-height: 20px!important;
     font-size: 16px!important;
 }
@@ -113,3 +113,43 @@ footer.page-footer {
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
+
+/*fallback ends */
+
+
+/* youtube responsive */
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video-wrapper {
+   margin: 20px auto;
+}
+
+/* youtube responsive ends */
+
+/* movie-detail-sidebar */
+
+.movie-detail-sidebar {
+    margin-top: 14px;
+}
+
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+/* movie-detail-sidebar ends */
