--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -4,7 +4,7 @@
       <!-- <a href="#" data-activates="mobile-demo" class="button-collapse btn-floating btn-large waves-effect waves-light red"><i class="material-icons">menu</i></a> -->
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> 
       <ul class="left-fix hide-on-med-and-down">
-        <li><a href="sass.html">Home</a></li>
+        <li>{{#link-to 'index'}}Home{{/link-to}}</li>
         <li><a href="badges.html">About</a></li>
         <li><a href="collapsible.html">Contact</a></li>
       </ul>
