--- a/app/templates/movies/detail.hbs
+++ b/app/templates/movies/detail.hbs
@@ -1,2 +1,9 @@
-<h2>Movies.detail</h2>
+<div class="row">
+    <div class="col-md-8">
+        {{video-youtube movie=model}}
+    </div>    
+    <div class="col-md-4">
+        {{detail-sidebar movie=model}}
+    </div>
+</div>    
 {{outlet}}
