Add firebase and integrate facebook login

--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -9,7 +9,7 @@
         <li><a href="collapsible.html">Contact</a></li>
       </ul>
       <ul class="right hide-on-med-and-down">
-        <li><a class="waves-effect waves-light btn">Login</a></li>
+        <li><a class="waves-effect waves-light btn" {{action 'login' }}>Login</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><img src="http://qfxcinemas.com/home/GetMobileAdImage?EventID=15" style="width:100%;"></li>
