--- a/app/templates/components/comment-box.hbs
+++ b/app/templates/components/comment-box.hbs
@@ -13,6 +13,9 @@
                     </div>
                     <h6 class="text-muted time">Leave a comment below</h6>
                 </div>
+                <div class="pull-right post-comment">
+                    <button class="waves-effect waves-light btn" {{action 'login' }}>Post</button>
+                </div>
             </div> 
             <div class="post-description material-comment"> 
                 <textarea class="txt-comment"></textarea>
