--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -155,6 +155,7 @@ footer.page-footer {
 /* movie-detail-sidebar ends */
 
 
+/* comment component */
 
 .material-comment textarea{
     border: 1px solid #DDDDDD;
@@ -169,3 +170,15 @@ footer.page-footer {
     color:white;
     font-weight: bold;
 }
+
+.comment-login{
+    text-align: center;
+}
+
+.comment-login a{
+    display: inline-block;
+    padding:16px 0px; 
+    cursor:pointer;
+}
+
+/* comment component ends */
