--- a/app/templates/components/movie-list.hbs
+++ b/app/templates/components/movie-list.hbs
@@ -12,7 +12,7 @@
                 <img class="activator" src="{{movie.image}}">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">{{movie.title}}<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">{{movie.eventname}}<i class="material-icons right">more_vert</i></span>
               </div>
 
               <div class="card-action movie-action">
@@ -22,7 +22,7 @@
               </div>
 
               <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">{{movie.title}}<i class="material-icons right">close</i></span>
+                <span class="card-title grey-text text-darken-4">{{movie.eventname}}<i class="material-icons right">close</i></span>
                 <br>
                 <p>{{movie.annotation}}</p>
               </div>
