Load multiple model in same route of movie listing

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
- {{movie-list movies=model type="Now Showing"}}
+ {{movie-list movies=currentmovies type="Now Showing"}}
 
-{{movie-list movies=model type="Comming Soon"}}     
+{{movie-list movies=upcomingmovies type="Comming Soon"}}     
 {{outlet}}
