--- a/app/templates/components/detail-sidebar.hbs
+++ b/app/templates/components/detail-sidebar.hbs
@@ -1,7 +1,7 @@
  <div class="row movie-detail-sidebar">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">{{movie.title}}</span>
+              <span class="card-title">{{movie.eventname}}</span>
               <p>{{movie.annotation}}</p>
             </div>
             <div class="card-action">
