--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -78,6 +78,11 @@ body {
     font-size: 16px!important;
 }
 
+.rating-movie {
+    color:#009688;
+    font-size: 12px;
+}
+
 /* movie-list-card-ends */
 
 /* footer */
@@ -150,6 +155,14 @@ footer.page-footer {
 .no-gutter > [class*='col-'] {
     padding-right:0;
     padding-left:0;
+}
+
+.movie-detail-sidebar table {
+    margin-top: 10px;
+}
+
+.movie-detail-sidebar td {
+    padding: 0px;
 }
 
 /* movie-detail-sidebar ends */
