--- a/app/templates/components/detail-sidebar.hbs
+++ b/app/templates/components/detail-sidebar.hbs
@@ -3,9 +3,40 @@
             <div class="card-content white-text">
               <span class="card-title">{{movie.eventname}}</span>
               <p>{{movie.annotation}}</p>
+
+                <table>
+
+                  <tbody>
+                    <tr>
+                      <td>Rating:</td>
+                      <td>{{movie.eventratingdescription}}</td>
+                    </tr>
+                    <tr>
+                      <td>Category:</td>
+                      <td>{{movie.showcategory}}</td>
+                    </tr>
+                     <tr>
+                      <td>Genre:</td>
+                      <td>{{movie.genre}}</td>
+                    </tr>
+                    <tr>
+                      <td>Run Time:</td>
+                      <td>{{movie.movielength}}</td>
+                    </tr>
+                    <tr>
+                      <td>Crews:</td>
+                      <td>{{movie.eventcrews}}</td>
+                    </tr>
+                    <tr>
+                      <td>Director:</td>
+                      <td>{{movie.director}}</td>
+                    </tr>
+                  </tbody>
+                </table>
+
             </div>
             <div class="card-action">
-              <a href="#">Show Time</a>
+              <a href="#" {{action 'showtime'}}>Show Time</a>
             </div>
           </div>
       </div>
