--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,27 @@
-{{outlet}}
+ 
+<div class="row about" style="margin-top: 26px;">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="card-panel teal white-text" style="padding:16px;">
+            <h4>About this website</h4>
+          <span>
+              This website is a demo of a single page web application build using EmberJS. 
+              This website is just for personal-use and not use for commericial purpose.
+              QFX Cinemas is a popular go-to destination for movie fanatics as well as normal viewers.
+              This web application is also a proof of concept to show how much better the original website of QFX could be.
+              As a part-time mobile developer and an admirer of material design by Google, this website is somewhat inspired by material design language.
+              <br><br>
+              This web application would not have been possible without the contribution of the open source community and its huge libraries and not to mention the help from google, stackoverflow and other blogs.
+              The following are the list of components that helped build this web application in no specific order :
+              <ol>
+                <li>EmberJS - Framework to build ambitous web application</li>
+                <li>Firebase - To power facebook login and comment system</li>
+                <li>MaterializeCSS - For material widgets</li>
+                <li>Bootstrap - To build responsive web app</li>
+                <li>Mirage - Client side mock server to test API</li>
+                <li>And many more...</li>
+             </ol>   
+
+          </span>
+    </div>      
+    </div>      
+</div>
