--- a/app/templates/components/app-footer.hbs
+++ b/app/templates/components/app-footer.hbs
@@ -8,9 +8,9 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Home</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Contact</a></li>
+                  <li>{{#link-to 'index' class="grey-text text-lighten-3"}}Home{{/link-to}}</li>
+                  <li>{{#link-to 'about' class="grey-text text-lighten-3"}}About{{/link-to}}</li>
+                  <li>{{#link-to 'contact' class="grey-text text-lighten-3"}}Contact{{/link-to}}</li>
                 </ul>
               </div>
             </div>
