--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -11,7 +11,7 @@
                 <p>I code during my free time. Getting my hands dirty with new programming languages and building software, mobile, and web applications is what I like to do. If I am not coding then I am watching football.</p>
                 </div>
                 <div class="card-action">
-                <a href="https://www.linkedin.com/in/sabin-bajracharya-5644aa35">@LinkeIn</a>    
+                <a href="https://www.linkedin.com/in/sabin-bajracharya-5644aa35">@LinkedIn</a>    
                 <a href="https://www.facebook.com/therealsabin">@facebook</a>
                 <a href="https://github.com/sabinbajracharya">@github</a>
                 <a href="https://twitter.com/sabincruz">@twitter</a>
