Move coment change listener to controller

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -195,6 +195,10 @@ footer.page-footer {
     cursor:pointer;
 }
 
+.commentbox-hide{
+    display: none;
+}
+
 /* comment component ends */
 
 /* about */
